--- a/2018/2018-03/2018-03-01/source/160x600.css
+++ b/2018/2018-03/2018-03-01/source/160x600.css
@@ -495,35 +495,67 @@
   }
 }
 
-/*-- slide right --*/
-@-webkit-keyframes slideRight {
+/*-- slide right out --*/
+@-webkit-keyframes slideRightOut {
   0%   {
     visibility: visible;
     -webkit-transform: translate(0,0);
   }
   100% { 
     visibility: visible;
-    -webkit-transform: translate(157px,0);
+    -webkit-transform: translate(100%,0);
   }
 }
-@-moz-keyframes slideRight {
+@-moz-keyframes slideRightOut {
   0%   {
     visibility: visible;
     -moz-transform: translate(0,0);
   }
   100% { 
     visibility: visible;
-    -moz-transform: translate(157px,0);
+    -moz-transform: translate(100%,0);
   }
 }
-@keyframes slideRight {
+@keyframes slideRightOut {
   0%   {
     visibility: visible;
     transform: translate(0,0);
   }
   100% { 
     visibility: visible;
-    transform: translate(157px,0);
+    transform: translate(100%,0);
+  }
+}
+
+/*-- slide right in --*/
+@-webkit-keyframes slideRightIn {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(-100%,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideRightIn {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(-100%,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes slideRightIn {
+  0%   {
+    visibility: visible;
+    transform: translate(-100%,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
   }
 }
 
@@ -543,8 +575,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 320px;
-  height: 50px;
+  width: 160px;
+  height: 600px;
   display: block;
 }
 
@@ -575,6 +607,7 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   overflow: hidden;
+  border: 1px solid #7a7873;
 }
 
 .content-wrapper { 
@@ -584,17 +617,17 @@
 }
 
 .bg {
-  background: url('./images/320x50_dog_bg.jpg') no-repeat center center;
+  background: url('./images/160x600_bg.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .header {
-  background: url('./images/320x50_dog_header.png') no-repeat center center;
-  width: 159px;
-  height: 28px;
-  top: 9px;
-  right: 105px;
+  background: url('./images/160x600_header.png') no-repeat center center;
+  width: 113px;
+  height: 128px;
+  top: 24px;
+  left: 23px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
@@ -605,36 +638,79 @@
   -moz-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
   animation: fadeIn 0.75s ease-in-out 1.5s forwards;
 }
-.dog {
-  background: url('./images/320x50_dog.png');
-  width: 53px;
-  height: 53px;
-  top: 3px;
-  left: 8px;
+.cta {
+  background: url('./images/160x600_cta.png') no-repeat center center;
+  width: 98px;
+  height: 107px;
+  top: 351px;
+  left: 31px;
+
+  -webkit-animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
+  animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
 }
-.header-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
-  animation: fadeOut 0.75s ease-in-out 3.25s forwards;
+.dog {
+  background: url('./images/160x600_dog.png');
+  width: 149px;
+  height: 158px;
+  top: 176px;
+  left: 16px;
 }
 .dog-container1 {
-  -webkit-animation: slideRight 1s linear 3.75s forwards;
-  -moz-animation: slideRight 1s linear 3.75s forwards;
-  animation: slideRight 1s linear 3.75s forwards;
+  -webkit-animation: slideRightOut 1s linear 2.75s forwards;
+  -moz-animation: slideRightOut 1s linear 2.75s forwards;
+  animation: slideRightOut 1s linear 2.75s forwards;
 }
 .dog1 {
-  -webkit-animation: rotate360 1s linear 3.75s forwards;
-  -moz-animation: rotate360 1s linear 3.75s forwards;
-  animation: rotate360 1s linear 3.75s forwards;
+  -webkit-animation: rotate360 1s linear 2.75s forwards;
+  -moz-animation: rotate360 1s linear 2.75s forwards;
+  animation: rotate360 1s linear 2.75s forwards;
 }
-.cta {
-  background: url('./images/320x50_dog_cta.png') no-repeat center center;
-  width: 146px;
-  height: 29px;
-  top: 10px;
-  left: 11px;
+.dog-container2 {
+  -webkit-animation: slideRightIn 1s linear 3.5s forwards;
+  -moz-animation: slideRightIn 1s linear 3.5s forwards;
+  animation: slideRightIn 1s linear 3.5s forwards;
+}
+.dog2 {
+  -webkit-animation: rotate360 1s linear 3.5s forwards;
+  -moz-animation: rotate360 1s linear 3.5s forwards;
+  animation: rotate360 1s linear 3.5s forwards;
+}
+.dog-wrapper2 {
+  -webkit-animation: fadeOut 0.75s ease-in-out 4.5s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 4.5s forwards;
+  animation: fadeOut 0.75s ease-in-out 4.5s forwards;
+}
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 5s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 5s forwards;
-  animation: fadeInUp 0.5s ease-in-out 5s forwards;
+.cat {
+  background: url('./images/160x600_cat.png');
+  width: 107px;
+  height: 161px;
+  top: 168px;
+  left: 29px;
+}
+.cat-wrapper {
+  -webkit-animation: fadeIn 0.75s ease-in-out 5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 5s forwards;
+  animation: fadeIn 0.75s ease-in-out 5s forwards;
+}
+.cat-container1 {
+  -webkit-animation: slideRightOut 1s linear 6s forwards;
+  -moz-animation: slideRightOut 1s linear 6s forwards;
+  animation: slideRightOut 1s linear 6s forwards;
+}
+.cat1 {
+  -webkit-animation: rotate360 1s linear 6s forwards;
+  -moz-animation: rotate360 1s linear 6s forwards;
+  animation: rotate360 1s linear 6s forwards;
+}
+.cat-container2 {
+  -webkit-animation: slideRightIn 1s linear 6.75s forwards;
+  -moz-animation: slideRightIn 1s linear 6.75s forwards;
+  animation: slideRightIn 1s linear 6.75s forwards;
+}
+.cat2 {
+  -webkit-animation: rotate360 1s linear 6.75s forwards;
+  -moz-animation: rotate360 1s linear 6.75s forwards;
+  animation: rotate360 1s linear 6.75s forwards;
 }
