--- a/2018/2018-03/2018-03-01/source/320x50.css
+++ b/2018/2018-03/2018-03-01/source/320x50.css
@@ -495,35 +495,67 @@
   }
 }
 
-/*-- slide right --*/
-@-webkit-keyframes slideRight {
+/*-- slide right Dog --*/
+@-webkit-keyframes slideRightDog {
   0%   {
     visibility: visible;
     -webkit-transform: translate(0,0);
   }
   100% { 
     visibility: visible;
-    -webkit-transform: translate(147px,0);
+    -webkit-transform: translate(157px,0);
   }
 }
-@-moz-keyframes slideRight {
+@-moz-keyframes slideRightDog {
   0%   {
     visibility: visible;
     -moz-transform: translate(0,0);
   }
   100% { 
     visibility: visible;
-    -moz-transform: translate(147px,0);
+    -moz-transform: translate(157px,0);
   }
 }
-@keyframes slideRight {
+@keyframes slideRightDog {
   0%   {
     visibility: visible;
     transform: translate(0,0);
   }
   100% { 
     visibility: visible;
-    transform: translate(147px,0);
+    transform: translate(157px,0);
+  }
+}
+
+/*-- slide right cat --*/
+@-webkit-keyframes slideRightCat {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(164px,0);
+  }
+}
+@-moz-keyframes slideRightCat {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(164px,0);
+  }
+}
+@keyframes slideRightCat {
+  0%   {
+    visibility: visible;
+    transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(164px,0);
   }
 }
 
@@ -543,8 +575,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 250px;
+  width: 320px;
+  height: 50px;
   display: block;
 }
 
@@ -575,7 +607,6 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   overflow: hidden;
-  border: 1px solid #7a7873;
 }
 
 .content-wrapper { 
@@ -585,18 +616,19 @@
 }
 
 .bg {
-  background: url('./images/300x250_cat_bg.jpg') no-repeat center center;
+  background: url('./images/320x50_bg.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .header {
-  background: url('./images/300x250_cat_header.png') no-repeat center center;
-  width: 148px;
-  height: 131px;
-  top: 10px;
-  right: 10px;
-
+  background: url('./images/320x50_header.png') no-repeat center center;
+  width: 159px;
+  height: 28px;
+  top: 9px;
+  right: 105px;
+}
+.header1 {
   -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   animation: fadeInDown 0.75s ease-in-out 1s forwards;
@@ -606,36 +638,77 @@
   -moz-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
   animation: fadeIn 0.75s ease-in-out 1.5s forwards;
 }
-.dog {
-  background: url('./images/300x250_cat.png');
-  width: 96px;
-  height: 144px;
-  top: 20px;
-  left: 28px;
-}
-.header-container {
+.header1-container {
   -webkit-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
   animation: fadeOut 0.75s ease-in-out 3.25s forwards;
 }
-.dog-container1 {
-  -webkit-animation: slideRight 1s linear 3.75s forwards;
-  -moz-animation: slideRight 1s linear 3.75s forwards;
-  animation: slideRight 1s linear 3.75s forwards;
+.dog-container {
+  -webkit-animation: slideRightDog 1s linear 3.75s forwards;
+  -moz-animation: slideRightDog 1s linear 3.75s forwards;
+  animation: slideRightDog 1s linear 3.75s forwards;
 }
-.dog1 {
+.dog {
+  background: url('./images/320x50_dog.png');
+  width: 53px;
+  height: 53px;
+  top: 3px;
+  left: 8px;
   -webkit-animation: rotate360 1s linear 3.75s forwards;
   -moz-animation: rotate360 1s linear 3.75s forwards;
   animation: rotate360 1s linear 3.75s forwards;
 }
 .cta {
-  background: url('./images/300x250_cat_cta.png') no-repeat center center;
-  width: 128px;
-  height: 140px;
-  top: 24px;
-  left: 24px;
-
+  background: url('./images/320x50_cta.png') no-repeat center center;
+  width: 146px;
+  height: 29px;
+  top: 10px;
+  left: 11px;
+}
+.cta1 {
   -webkit-animation: fadeInUp 0.5s ease-in-out 5s forwards;
   -moz-animation: fadeInUp 0.5s ease-in-out 5s forwards;
   animation: fadeInUp 0.5s ease-in-out 5s forwards;
+}
+
+.dog-frame {
+  -webkit-animation: fadeOut 0.75s ease-in-out 6.5s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 6.5s forwards;
+  animation: fadeOut 0.75s ease-in-out 6.5s forwards;
+}
+.header2 {
+  -webkit-animation: fadeInDown 0.75s ease-in-out 7s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 7s forwards;
+  animation: fadeInDown 0.75s ease-in-out 7s forwards;
+}
+.cat-wrapper {
+  -webkit-animation: fadeIn 0.75s ease-in-out 7.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 7.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 7.5s forwards;
+}
+.header2-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 9.25s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 9.25s forwards;
+  animation: fadeOut 0.75s ease-in-out 9.25s forwards;
+}
+.cat-container {
+  -webkit-animation: slideRightCat 1s linear 9.75s forwards;
+  -moz-animation: slideRightCat 1s linear 9.75s forwards;
+  animation: slideRightCat 1s linear 9.75s forwards;
+}
+.cat {
+  background: url('./images/320x50_cat.png');
+  width: 32px;
+  height: 48px;
+  top: 1px;
+  left: 10px;
+
+  -webkit-animation: rotate360 1s linear 9.75s forwards;
+  -moz-animation: rotate360 1s linear 9.75s forwards;
+  animation: rotate360 1s linear 9.75s forwards;
+}
+.cta2 {
+  -webkit-animation: fadeInUp 0.5s ease-in-out 11s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 11s forwards;
+  animation: fadeInUp 0.5s ease-in-out 11s forwards;
 }
