--- a/2018/2018-03/2018-03-27/source/version2/970x250_3.css
+++ b/2018/2018-03/2018-03-27/source/version2/970x250_3.css
@@ -575,8 +575,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 600px;
+  width: 970px;
+  height: 250px;
   display: block;
 }
 
@@ -623,44 +623,44 @@
   animation: fadeIn 0.5s ease-in-out 0.5s forwards;
 }
 .logo {
-  background: url('./images/300x600_logo.png') no-repeat center center;
+  background: url('./images/970x250_logo.png') no-repeat center center;
   width: 73px;
   height: 87px;
-  top: 15px;
-  left: 19px;
+  top: 82px;
+  left: 20px;
 
   -webkit-animation: fadeInDown 0.5s ease-in-out 0.75s forwards;
   -moz-animation: fadeInDown 0.5s ease-in-out 0.75s forwards;
   animation: fadeInDown 0.5s ease-in-out 0.75s forwards;
 }
-.frame1-image {
-  background: url('./images/300x600_frame1_image.png') no-repeat center center;
-  width: 300px;
-  height: 350px;
-  top: 80px;
-  left: 0px;
+.frame3-image {
+  background: url('./images/970x250_frame3_image.png') no-repeat center center;
+  width: 247px;
+  height: 247px;
+  top: 1px;
+  right: 361px;
 
   -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
   -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
   animation: fadeIn 0.5s ease-in-out 1s forwards;
 }
-.frame1-cta {
-  background: url('./images/300x600_frame1_cta.png') no-repeat center center;
+.frame3-cta {
+  background: url('./images/970x250_frame3_cta.png') no-repeat center center;
   width: 165px;
   height: 48px;
-  bottom: 20px;
-  right: 67px;
+  top: 101px;
+  right: 30px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 1.25s forwards;
-  animation: fadeInUp 0.5s ease-in-out 1.25s forwards;
+  -webkit-animation: fadeInLeft 0.5s ease-in-out 1.25s forwards;
+  -moz-animation: fadeInLeft 0.5s ease-in-out 1.25s forwards;
+  animation: fadeInLeft 0.5s ease-in-out 1.25s forwards;
 }
-.frame1-text {
-  background: url('./images/300x600_frame1_text.png') no-repeat center center;
-  width: 198px;
+.frame3-text {
+  background: url('./images/970x250_frame3_text.png') no-repeat center center;
+  width: 224px;
   height: 46px;
-  top: 460px;
-  left: 18px;
+  top: 81px;
+  left: 110px;
 
   -webkit-animation: fadeInDown 0.5s ease-in-out 1.25s forwards;
   -moz-animation: fadeInDown 0.5s ease-in-out 1.25s forwards;
