--- a/2018/2018-04/2018-04-12/source/farm-static/160x600.css
+++ b/2018/2018-04/2018-04-12/source/farm-static/160x600.css
@@ -703,14 +703,19 @@
 
 .image {
   background: url('./images/160x600_image.jpg') no-repeat center center;
-  width: 160px;
-  height: 600px;
+  width: 392px;
+  height: 501px;
   top: 0px;
-  left: 0px;
+  left: -160px;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -webkit-animation: showBackground 0.01s ease-in-out 0s forwards;
+  -moz-animation: showBackground 0.01s ease-in-out 0s forwards;
+  animation: showBackground 0.01s ease-in-out 0s forwards;
+}
+.image-wrapper {
+  -webkit-animation: showContent 0.5s ease-in-out 0.75s forwards;
+  -moz-animation: showContent 0.5s ease-in-out 0.75s forwards;
+  animation: showContent 0.5s ease-in-out 0.75s forwards;
 }
 .logo {
   background: url('./images/160x600_logo.png') no-repeat center center;
@@ -724,16 +729,32 @@
   animation: fadeIn 0.5s ease-in-out 0.5s forwards;
 }
 
-.text {
-  background: url('./images/160x600_text.png') no-repeat center center;
+.text1 {
+  background: url('./images/160x600_text1.png') no-repeat center center;
   width: 130px;
-  height: 119px;
+  height: 47px;
   top: 20px;
   left: 16px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
+  -webkit-animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
+  -moz-animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
+  animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
+}
+.image-container {
+  -webkit-animation: slideLeftBackground 1s ease-in-out 2s forwards;
+  -moz-animation: slideLeftBackground 1s ease-in-out 2s forwards;
+  animation: slideLeftBackground 1s ease-in-out 2s forwards;
+}
+.text2 {
+  background: url('./images/160x600_text2.png') no-repeat center center;
+  width: 130px;
+  height: 72px;
+  top: 67px;
+  left: 16px;
+
+  -webkit-animation: fadeInRight100 0.75s ease-in-out 2s forwards;
+  -moz-animation: fadeInRight100 0.75s ease-in-out 2s forwards;
+  animation: fadeInRight100 0.75s ease-in-out 2s forwards;
 }
 .cta {
   background: url('./images/160x600_cta.png') no-repeat center center;
@@ -742,7 +763,7 @@
   top: 150px;
   left: 16px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
-  animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 3s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 3s forwards;
+  animation: fadeIn 0.5s ease-in-out 3s forwards;
 }
