--- a/2018/2018-04/2018-04-12/source/farm-static/970x250.css
+++ b/2018/2018-04/2018-04-12/source/farm-static/970x250.css
@@ -724,16 +724,27 @@
   animation: fadeIn 0.5s ease-in-out 0.5s forwards;
 }
 
-.text {
-  background: url('./images/970x250_text.png') no-repeat center center;
+.text1 {
+  background: url('./images/970x250_text1.png') no-repeat center center;
   width: 393px;
-  height: 144px;
+  height: 50px;
   top: 20px;
   left: 37px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.25s forwards;
+  -webkit-animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
+  -moz-animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
+  animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
+}
+.text2 {
+  background: url('./images/970x250_text2.png') no-repeat center center;
+  width: 393px;
+  height: 94px;
+  top: 70px;
+  left: 37px;
+
+  -webkit-animation: fadeInRight100 0.75s ease-in-out 2s forwards;
+  -moz-animation: fadeInRight100 0.75s ease-in-out 2s forwards;
+  animation: fadeInRight100 0.75s ease-in-out 2s forwards;
 }
 .cta {
   background: url('./images/970x250_cta.png') no-repeat center center;
@@ -742,7 +753,7 @@
   top: 169px;
   left: 42px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
-  animation: fadeInUp 0.5s ease-in-out 2.25s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 3s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 3s forwards;
+  animation: fadeIn 0.5s ease-in-out 3s forwards;
 }
