--- a/2018/2018-04/2018-04-13/source/320x50.css
+++ b/2018/2018-04/2018-04-13/source/320x50.css
@@ -522,7 +522,7 @@
 }
 
 /*-- slide in right --*/
-@-webkit-keyframes slideInRight {
+@-webkit-keyframes slideInDown {
   0%   {
     visibility: visible;
     -webkit-transform: translate(-100%,0);
@@ -532,7 +532,7 @@
     -webkit-transform: translate(0,0);
   }
 }
-@-moz-keyframes slideInRight {
+@-moz-keyframes slideInDown {
   0%   {
     visibility: visible;
     -moz-transform: translate(-100%,0);
@@ -542,7 +542,7 @@
     -moz-transform: translate(0,0);
   }
 }
-@keyframes slideInRight {
+@keyframes slideInDown {
   0%   {
     visibility: visible;
     transform: translate(-100%,0);
@@ -582,6 +582,70 @@
   100% { 
     visibility: visible;
     transform: translate(0,0);
+  }
+}
+
+/*-- slide in down --*/
+@-webkit-keyframes slideInDown {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideInDown {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes slideInDown {
+  0%   {
+    visibility: visible;
+    transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+  }
+}
+
+/*-- slide out down --*/
+@-webkit-keyframes slideOutDown {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,100%);
+  }
+}
+@-moz-keyframes slideOutDown {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,100%);
+  }
+}
+@keyframes slideOutDown {
+  0%   {
+    visibility: visible;
+    transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,100%);
   }
 }
 
@@ -688,61 +752,57 @@
 }
 
 .image1-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 2.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 2.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 2.5s forwards;
+  -webkit-animation: slideOutDown 0.75s linear 2.5s forwards;
+  -moz-animation: slideOutDown 0.75s linear 2.5s forwards;
+  animation: slideOutDown 0.75s linear 2.5s forwards;
 }
 
 .image2 {
   background: url('./images/320x50_image2.jpg') no-repeat center center;
-	background-size: 100% auto;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 3s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 3s forwards;
-  animation: fadeIn 0.75s ease-in-out 3s forwards;
+  background-size: 100% auto;
+  -webkit-animation: slideInDown 0.75s linear 2.5s forwards;
+  -moz-animation: slideInDown 0.75s linear 2.5s forwards;
+  animation: slideInDown 0.75s linear 2.5s forwards;
 }
 
 .image2-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 5s forwards;
-  animation: fadeOut 0.75s ease-in-out 5s forwards;
+  -webkit-animation: slideOutDown 0.75s linear 4.5s forwards;
+  -moz-animation: slideOutDown 0.75s linear 4.5s forwards;
+  animation: slideOutDown 0.75s linear 4.5s forwards;
 }
 
 .image3 {
   background: url('./images/320x50_image3.jpg') no-repeat center center;
-	background-size: 100% auto;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 5.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 5.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 5.5s forwards;
+  background-size: 100% auto;
+  -webkit-animation: slideInDown 0.75s linear 4.5s forwards;
+  -moz-animation: slideInDown 0.75s linear 4.5s forwards;
+  animation: slideInDown 0.75s linear 4.5s forwards;
 }
 
 .image3-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 7.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 7.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 7.5s forwards;
+  -webkit-animation: slideOutDown 0.75s linear 6.5s forwards;
+  -moz-animation: slideOutDown 0.75s linear 6.5s forwards;
+  animation: slideOutDown 0.75s linear 6.5s forwards;
 }
 
 .image4 {
   background: url('./images/320x50_image4.jpg') no-repeat center center;
-	background-size: 100% auto;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  animation: fadeIn 0.75s ease-in-out 8s forwards;
+  background-size: 100% auto;
+  -webkit-animation: slideInDown 0.75s linear 6.5s forwards;
+  -moz-animation: slideInDown 0.75s linear 6.5s forwards;
+  animation: slideInDown 0.75s linear 6.5s forwards;
 }
 
 .image4-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 10s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 10s forwards;
-  animation: fadeOut 0.75s ease-in-out 10s forwards;
+  -webkit-animation: slideOutDown 0.75s linear 8.5s forwards;
+  -moz-animation: slideOutDown 0.75s linear 8.5s forwards;
+  animation: slideOutDown 0.75s linear 8.5s forwards;
 }
 
 .image5 {
   background: url('./images/320x50_image5.jpg') no-repeat center center;
-	background-size: 100% auto;
-  
-  -webkit-animation: fadeIn 0.75s ease-in-out 10.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 10.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 10.5s forwards;  
+  background-size: 100% auto;
+  -webkit-animation: slideInDown 0.75s linear 8.5s forwards;
+  -moz-animation: slideInDown 0.75s linear 8.5s forwards;
+  animation: slideInDown 0.75s linear 8.5s forwards; 
 }
